--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
 # Ignore all .xlsx files
 *.xlsx
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+
+# Webpack assets and output
+/dist/
+/bundle.js
+/bundle.js.map
