--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.24.8",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
